src/objects/Revenue_Forecast__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <description>The account record against which the forecast is recorded</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Revenue Forecasts</relationshipLabel>
        <relationshipName>Revenue_Projection_Account</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Accounting_Code1__c</fullName>
        <description>The GL account against which the revenue amount will be mapped. This field is used to link the records between Invoice IT and your GL system</description>
        <inlineHelpText>The GL account against which the revenue amount will be mapped. This field is used to link the records between Invoice IT and your GL system</inlineHelpText>
        <label>Accounting Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applied_Recognition_Date_Name__c</fullName>
        <description>Holds a copy of the date name that was used to match the recognition rule</description>
        <inlineHelpText>Holds a copy of the date name that was used to match the recognition rule</inlineHelpText>
        <label>Applied Recognition Date (Name)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applied_Recognition_Date_Value__c</fullName>
        <description>Holds a copy of the date value that was used to match the revenue period</description>
        <inlineHelpText>Holds a copy of the date value that was used to match the revenue period</inlineHelpText>
        <label>Applied Recognition Date (Value)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Applied_Recognition_Type__c</fullName>
        <description>This holds the Recognition Type value of the Revenue Recognition Rule applied. This field is created for audit purposes</description>
        <inlineHelpText>This holds the Recognition Type value of the Revenue Recognition Rule applied. This field is created for audit purposes</inlineHelpText>
        <label>Applied Recognition Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applied_Revenue_Recognition_Rule__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The revenue recognition rule record applied</description>
        <inlineHelpText>The revenue recognition rule record applied</inlineHelpText>
        <label>Applied Revenue Recognition Rule</label>
        <referenceTo>Revenue_Recognition_Rule__c</referenceTo>
        <relationshipLabel>Revenue Forecasts</relationshipLabel>
        <relationshipName>Revenue_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deferred_Balance__c</fullName>
        <description>The deferred balance as of this accounting period</description>
        <label>Deferred Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deferred_Revenue_Accounting_Code__c</fullName>
        <description>The GL account against which the deferred revenue amount will be mapped. This field is used to link the records between Invoice IT and your GL system</description>
        <inlineHelpText>The GL account against which the deferred revenue amount will be mapped. This field is used to link the records between Invoice IT and your GL system</inlineHelpText>
        <label>Deferred Revenue Accounting Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order_Rate_Plan_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The order charge data against which this transaction is created</description>
        <label>Order Rate Plan Charge</label>
        <referenceTo>Job_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Revenue Forecasts</relationshipLabel>
        <relationshipName>Revenue_Projection_Charge</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The order against which this forecast is recorded</description>
        <label>Order</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Revenue Forecasts</relationshipLabel>
        <relationshipName>Revenue_Projection_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Closed_Revenue_Period__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>When the original revenue period is closed, that values is stored in this for audit purposes</description>
        <inlineHelpText>When the original revenue period is closed, that values is stored in this for audit purposes</inlineHelpText>
        <label>Original Closed Revenue Period</label>
        <referenceTo>Revenue_Period__c</referenceTo>
        <relationshipLabel>Revenue Forecasts (Original Closed Revenue Period)</relationshipLabel>
        <relationshipName>Revenue_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recognised_Revenue__c</fullName>
        <description>Total revenue recognized so far for this service</description>
        <label>Recognised Revenue (Cumulative)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Amount__c</fullName>
        <description>The revenue amount that will be recognized this accounting period.</description>
        <label>Revenue Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Period_End_Date__c</fullName>
        <description>The end date of the applied revenue period</description>
        <formula>Revenue_Period__r.Revenue_Period_End_Date__c</formula>
        <label>Revenue Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue_Period_Start_Date__c</fullName>
        <description>The start date of the applied revenue period</description>
        <formula>Revenue_Period__r.Revenue_Period_Start_Date__c</formula>
        <label>Revenue Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue_Period__c</fullName>
        <description>The revenue period against which the revenue is recognized</description>
        <label>Revenue Period</label>
        <referenceTo>Revenue_Period__c</referenceTo>
        <relationshipLabel>Revenue Forecasts</relationshipLabel>
        <relationshipName>Revenue_Projection_Revenue_Period</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Revenue Forecast</label>
    <nameField>
        <label>Revenue Forecast Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Forecasts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>